# test_new_algorithm

./: .dockerignore  .env-docker.example  .env.example  .gitignore  ADMIN.md  CLUSTERING_FIXES_GUIDE.md  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_FILTERING.txt  Dockerfile  FILTERING_IMPROVEMENTS.md  IMPROVEMENTS.md  PIPELINE.md  QUICK_START.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requests.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 0001_initial_schema.py  0002_comment_moderation_fields.py  0003_appeal_analytics_tables.py  0004_appeal_training_samples.py  (+4 more)
app/: README.md  main.py
desktop/: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  YouTubeIntelDesktop.spec  desktop_main.py  pyproject.toml  requirements-build.txt  requirements.txt
docs/: clustering-optimization.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
scripts/: README.md  benchmark_topic_models.py  cleanup_and_test_clustering.sh  cleanup_script.py  start_api.sh  start_beat.sh  start_worker.sh
tests/: README.md  test_appeal_analytics.py  test_benchmark_topic_models.py  test_celery_manual_mode.py  test_clustering.py  test_openai_compat.py  test_openai_provider_quota.py  test_pipeline_llm_provider.py  test_pipeline_positions.py  test_pipeline_upsert.py  test_preprocessing.py  test_routes_health.py  test_routes_report_detail.py  test_routes_run_options.py  test_toxic_moderation_prod.py  test_youtube_ban_service_prod.py  test_youtube_client_dry_run.py
(+127 files in other folders)
